Added instructions and changed menu color

--- a/home.html
+++ b/home.html
@@ -94,12 +94,12 @@ svg{
   width: 150px;
   line-height: 40px;
   padding: 25px;
-  background: #dde;
+  background: #FF9201;
 }
 
 
 .menu-button:hover {
-  background-color: #eef;
+  background-color: #ffa733;
 }
 
 .title{
@@ -476,7 +476,8 @@ svg{
     </div>
     <div class="col-md-7">
       <div class="title" id="co"><h1> Moodologist </h1></div>
-      <div id="m"><h3 style="margin-top:-10px;">&nbsp;&nbsp;&nbsp;&nbsp; You thirsty brah? - Brosapham Lincoln </h3> </div>
+      <div id="m"><h3 style="margin-top:-10px; font-size:1.2em;">A mix for every mood. Pick a category in the menu on the left<br>
+      and let's get started. </h3> </div>
       <div id="n"><h3> Emoji </h3> </div>
       <div id="o"><h3> Landscape </h3> </div>
       <div id="p"><h3> Word </h3> </div>
@@ -489,7 +490,8 @@ svg{
 
 
   <div class="container emoticon" style="background-color:#e0d9fe">
-      <div class="row" style="padding-top:23%">
+      <div class="row" style="padding-top:8%" style="margin=top:5%">
+      <h3 align="center" style="font-size:3em;padding-bottom:5%">Pick an emoji:</h3>
         <div id="Sad"><div class="col-md-2 col-md-offset-2" id="emoti" style="margin-left:20%"><img src="img/sad.png" width="60%"></div></div>
         <div id="Giggly"><div class="col-md-2" id="emoti"><img src="img/giggly.png" alt="Smiley face" width="60%"></div></div>
         <div id="Happy"><div class="col-md-2" id="emoti"><img src="img/happy.png" alt="Smiley face" width="60%"></div></div>
@@ -499,7 +501,6 @@ svg{
 
   <div class="container landscape" align="center" style="background-color:#E5FEFE; padding-top:8%">
     <h2 style="text-align:center; ">Choose one of the following:</h2>
-
       <div class="row" style="margin-top:5%">
           <div id="Mountains"><div class="col-md-2" style="margin-left:3%"><img class="hvr-wobble-vertical" src="img/lake.jpg" alt="Lake" height="40%" width="120%" style="border-radius:100%"></div></div>
           <div id="Skyline"><div class="col-md-2 col-md-offset-1"><img class="hvr-wobble-horizontal" src="img/skyline.jpg" alt="Skyline at night" height="40%" width="120%" style="border-radius:100%"></div></div>
@@ -525,7 +526,7 @@ svg{
 
     <div class="container colors">
       <h3 style="text-align:center; padding-top:8%; font-size:3em;">Pick a color:</h3>
-      <div class="row" style="padding-left:23%; padding-right:20%; padding-top: 10%;">
+      <div class="row" style="padding-left:23%; padding-right:20%; padding-top: 6%;">
         <div class="col-md-3">
           <div class="hvr-buzz"><div id ="Green" class="sphere green"></div></div>
         </div>
@@ -706,7 +707,7 @@ function fadeDiv2(){
 }
 
 function fadeDiv3(){
-    $("#co").animate({'color': "#92771B2" }, 1000, function(){fadeDiv4();});
+    $("#co").animate({'color': "#92771B" }, 1000, function(){fadeDiv4();});
 }
 
 function fadeDiv4(){
