--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
   width: 150px;
   line-height: 40px;
   padding: 25px;
-  background: #dde;
+  background: #FF9201;
 }
 
 
 .menu-button:hover {
-  background-color: #eef;
+  background-color: #ffa733;
 }
 
 .title{
@@ -449,7 +449,8 @@
   </div>
     <div class="col-md-7">
       <div class="title" id="co"><h1> Moodologist </h1></div>
-      <div id="m"><h3 style="margin-top:-10px;">&nbsp;&nbsp;&nbsp;&nbsp; You thirsty brah? - Brosapham Lincoln </h3> </div>
+      <div id="m"><h3 style="margin-top:-10px; font-size:1.2em;">A mix for every mood. Pick a category in the menu on the left<br>
+      and let's get started. </h3> </div>
       <div id="n"><h3> Emoji </h3> </div>
       <div id="o"><h3> Landscape </h3> </div>
       <div id="p"><h3> Word </h3> </div>
@@ -458,8 +459,9 @@
   </div>
 
 
-  <div class="container emoticon" style="background-color:#dde">
-      <div class="row" style="padding-top:23%">
+  <div class="container emoticon" style="background-color:#e0d9fe">
+      <div class="row" style="padding-top:12%" style="margin=top:5%">
+      <h3 align="center" style="font-size:3em;padding-bottom:5%">Pick an emoji:</h3>
         <div id="Sad"><div class="col-md-2 col-md-offset-2" id="emoti" style="margin-left:20%"><img src="img/sad.png" width="60%"></div></div>
         <div id="Giggly"><div class="col-md-2" id="emoti"><img src="img/giggly.png" alt="Smiley face" width="60%"></div></div>
         <div id="Happy"><div class="col-md-2" id="emoti"><img src="img/happy.png" alt="Smiley face" width="60%"></div></div>
@@ -495,7 +497,7 @@
 
     <div class="container colors">
       <h3 style="text-align:center; padding-top:8%; font-size:3em;">Pick a color:</h3>
-      <div class="row" style="padding-left:23%; padding-right:20%; padding-top: 10%;">
+      <div class="row" style="padding-left:23%; padding-right:20%; padding-top: 6%;">
         <div class="col-md-3">
           <div class="hvr-buzz"><div id ="Green" class="sphere green"></div></div>
         </div>
@@ -683,7 +685,7 @@ function fadeDiv2(){
 }
 
 function fadeDiv3(){
-    $("#co").animate({'color': "#92771B2" }, 1000, function(){fadeDiv4();});
+    $("#co").animate({'color': "#92771B" }, 1000, function(){fadeDiv4();});
 }
 
 function fadeDiv4(){
@@ -702,5 +704,6 @@ $(document).ready(function(){
 })
 
 </script>
+
 
  </html>
