--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
 
       <div class="container final" style="background-color:#e5e5e5; padding-top:13%">
       <div class="row">
-      <div class="col-md-7" align="center"><h1><span class="yourdrink"></span></h1></div>
+      <div class="col-md-7" align="center"><h3>We recommend you try a ....</h3><br><h1><span class="yourdrink"></span></h1></div>
       <div class="col-md-4" style="padding-left:3%"><div id="glass"> <div id="drink"></div></div></div>
       <!--<div class="col-md-4"><h3 id="tree"> For more information about this cocktail, please visit....</div>-->
     </div>
